Version updates, code refactor and new benchmark cases